# cc

./: CLAUDE.md  README.md
docs/plans/: 2026-01-16-neuroguide-design.md
neuroguide/backend/: .env.example  pyproject.toml
neuroguide/backend/app/: config.py  main.py
neuroguide/backend/app/routers/: chat.py
neuroguide/backend/app/services/: agent.py  analysis.py  datasets.py
neuroguide/backend/app/tools/: eeg_tools.py
neuroguide/backend/tests/: test_agent.py  test_analysis.py  test_dataset_loading.py  test_datasets.py  test_tools.py
neuroguide/docs/: 2026-01-16-neuroguide-implementation.md
neuroguide/frontend/: index.html  package.json
neuroguide/frontend/src/: App.tsx  index.css
neuroguide/frontend/src/components/: ChatPanel.css  ChatPanel.tsx  Layout.css  Layout.tsx  PowerSpectrumPlot.tsx  SpectrogramPlot.tsx  TimeSeriesPlot.tsx
