[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroguide"
version = "0.1.0"
description = "EEG exploration assistant with AI-narrated tours"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "mne>=1.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
